--- a/src/app/components/global/post/post.component.html
+++ b/src/app/components/global/post/post.component.html
@@ -36,7 +36,7 @@
       <mat-icon>more_vert</mat-icon>
     </button>
     <mat-menu #menu="matMenu">
-      <button mat-menu-item>
+      <button mat-menu-item [routerLink]="['/edit-post/' + post?.id]">
         <mat-icon>edit</mat-icon>
         <span>Edit Post</span>
       </button>
