--- a/src/app/components/new-post-exploreview/new-post-exploreview.component.html
+++ b/src/app/components/new-post-exploreview/new-post-exploreview.component.html
@@ -15,7 +15,7 @@
         "
       />
     </div>
-    <mat-card-title>{{ loggedUser.displayName }},</mat-card-title>
+    <mat-card-title>{{ loggedUser.displayName }}</mat-card-title>
     <mat-card-subtitle style="color: gray !important"
       >what's on your mind?</mat-card-subtitle
     >
