--- a/src/app/pages/create-community-page/create-community-page.component.html
+++ b/src/app/pages/create-community-page/create-community-page.component.html
@@ -171,6 +171,7 @@
       >
       <div>
         <button
+          #finishButton
           mat-button
           (click)="createCommunity()"
           [disabled]="createCommunityForm.invalid"
