--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -127,4 +127,4 @@
   </div>
 </div>
 <app-toolbar></app-toolbar>
-<app-mobilenav *ngIf="!loggedUser"></app-mobilenav>
+<app-mobilenav *ngIf="loggedUser.id != undefined"></app-mobilenav>
