--- a/src/app/pages/start-page/start-page.component.html
+++ b/src/app/pages/start-page/start-page.component.html
@@ -5,4 +5,4 @@
         <app-feed></app-feed> <!-- This is the main page  -->
     </div>
     <app-toolbar></app-toolbar>
-<app-mobilenav></app-mobilenav>
+<app-mobilenav [addPost]="true"></app-mobilenav>
