--- a/src/app/components/global/edit-post/edit-post.component.css
+++ b/src/app/components/global/edit-post/edit-post.component.css
@@ -1,62 +1,55 @@
-.new-post-card{
-    background-color: rgba(0, 0, 0, 0); 
-    padding:1rem;
-    max-width:580px;
-    width:100vw
-  }
-  .header {
+.user-info{
     display: flex;
-    flex-direction: row;
-    gap: 1rem;
     align-items: center;
-  }
-  
-  .img-exists{
-    width:100px;
-    height:100px;
-    position:relative;
-  }
-  
-  .img-exists img{
-    width:100%;
-    height:100%;
-    object-fit: cover;
-  }
-  
-  .image-exists-icon{
-    top: 0;
-    left:0;
-    width:100%;
-    height:100%;
-    z-index:1;
-    position:absolute;
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    background-color: rgba(255,255,255,0.25);
-  }
-  
-  .userInfo {
-    margin-top: 1rem;
-    display: flex;
-    flex-direction: row;
-    gap: 1rem;
     margin-bottom: 1rem;
-  }
-  
-  .mat-mdc-raised-button > .mat-icon {
-    margin-left: 0 !important;
-    margin-right: 0 !important;
-  }
-  
-  .icons {
+}
+
+.user-info img{
+    width: 3rem;
+    height: 3rem;
+    border-radius: 50%;
+    margin-right: 1rem;
+}
+
+.container{
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-  }
-  
-  .file-input {
-    display: none;
-  }
-  
+    flex-direction:column;
+}
+
+
+.top-bar{
+  position:fixed;
+  width:100vw;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #673ab7;
+}
+
+.top-bar .title{
+  position:absolute;
+  width:100%;
+  text-align:center;
+}
+
+.title h1{
+  margin-bottom:0;
+}
+
+.main-page{
+  background-color:var(--lighter-background-color);
+  padding:2rem;
+  width:calc(100vw - 4rem);
+  max-width:580px;
+  margin:48px auto;
+}
+
+.file-input{
+  display:none;
+}
+
+.save-cancel-buttons{
+  margin-top:1rem;
+  display:flex;
+  justify-content:space-between;
+}
