--- a/src/app/pages/post/post-detail/post-detail.component.html
+++ b/src/app/pages/post/post-detail/post-detail.component.html
@@ -1,3 +1,6 @@
+<div class="page-loading" *ngIf="isLoading">
+  <mat-spinner *ngIf="isLoading"></mat-spinner>
+</div>
 <div class="container">
   <mat-card style="background-color: transparent; display: flex">
     <mat-toolbar color="primary">
