--- a/src/app/components/global/edit-post/edit-post.component.css
+++ b/src/app/components/global/edit-post/edit-post.component.css
@@ -16,6 +16,34 @@
     flex-direction:column;
 }
 
+.img-exists{
+  width:100px;
+  height:100px;
+  position:relative;
+}
+
+.img-exists img{
+  width:100%;
+  height:100%;
+  object-fit: cover;
+}
+
+.image-exists-icon{
+  top: 0;
+  left:0;
+  width:100%;
+  height:100%;
+  z-index:1;
+  position:absolute;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  background-color: rgba(255,255,255,0.25);
+}
+
+.top-bar button{
+  z-index:1;
+}
 
 .top-bar{
   position:fixed;
