--- a/src/app/components/new-post-exploreview/new-post-exploreview.component.css
+++ b/src/app/components/new-post-exploreview/new-post-exploreview.component.css
@@ -59,3 +59,24 @@
 .file-input {
   display: none;
 }
+
+
+.communityInfo{
+  display:flex;
+  flex-direction:row;
+  gap:1rem;
+  padding:0 1rem;
+  align-items:center;
+}
+
+.communityInfo img{
+  width:15px;
+  height:15px;
+  border-radius:50%;
+}
+
+.communityInfo p{
+  font-size:0.75rem;
+  color:whitesmoke;
+  margin:0;
+}
