--- a/src/app/pages/profile/profile.component.css
+++ b/src/app/pages/profile/profile.component.css
@@ -117,6 +117,15 @@
   align-items: center;
 }
 
+.post-loader{
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  height:8rem;
+  overflow-y:hidden;
+  background-color:#121212;
+}
+
 .no-posts {
   display: flex;
   flex-direction: column;
