--- a/src/app/components/navigation/sidenav/sidenav.component.html
+++ b/src/app/components/navigation/sidenav/sidenav.component.html
@@ -34,7 +34,7 @@
     </div>
     <div class="bottom-icons">
       <mat-divider></mat-divider>
-        <div class="search">
+        <div class="search" (click)="openSearch()">
           <mat-icon style="color:white;">search</mat-icon>
         </div>
     </div>
